--- a/svc/controller-system/eva-cs-agent.service
+++ b/svc/controller-system/eva-cs-agent.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=EVA ICS Controller System Agent for Linux
+Description=EVA ICS System Controller Agent for Linux
 After=network.target
 
 [Service]
