--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -30,6 +30,7 @@ openssl = { version = "0.10.63", optional = true }
 clap = { version = "4.4.18", optional = true, features = ["derive"] }
 eventlog = { version = "0.2.2", optional = true }
 windows-service = { version = "0.6.0", optional = true }
+num_cpus = "1.16.0"
 
 [profile.release]
 strip = true
