--- a/share/svc-tpl/svc-tpl-controller-system.yml
+++ b/share/svc-tpl/svc-tpl-controller-system.yml
@@ -42,6 +42,17 @@ config:
       #mount_points:
         #- /
         #- /var
+    # block device info (Linux only)
+    blk:
+      enabled: true
+      # enable specific devices only
+      # note: for automatic device list reporting unavailable is not supported,
+      # loop devices in auto-list are omitted
+      #devices:
+        #- nvme0n1
+        #- nvme1n1
+        #- sda
+        #- sdb
     # network info
     network:
       enabled: true
