--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 busrt = { version = "0.4", features = ["rpc", "ipc"], optional = true }
-eva-common = { version = "0.3.38", features = ["events"] }
-eva-sdk = { version = "0.3.39", optional = true }
+eva-common = { version = "0.3.41", features = ["events"] }
+eva-sdk = { version = "0.3.45", features = ["controller"] }
 tokio = { version = "1.20.1", features = ["full"] }
 async-trait = { version = "0.1.51", optional = true }
 serde = { version = "1.0.143", features = ["derive", "rc"] }
@@ -24,7 +24,7 @@ serde_yaml = { version = "0.9.31", optional = true }
 is-terminal = { version = "0.4.10", optional = true }
 env_logger = { version = "0.11.1", optional = true }
 syslog = { version = "6.1.0", optional = true }
-#bmart = "0.2.6"
+bmart = "0.2.6"
 reqwest = { version = "0.11.24", optional = true, features = ["json"] }
 openssl = { version = "0.10.63", optional = true }
 clap = { version = "4.4.18", optional = true, features = ["derive"] }
@@ -62,10 +62,10 @@ std-alloc = []
 openssl-vendored = ["eva-common/openssl-vendored", "openssl/vendored"]
 openssl3 = ["eva-common/openssl3"]
 
-service = ["busrt", "eva-sdk", "async-trait", "http-body-util", "hyper", "hyper-util", "jemallocator", "procfs"]
+service = ["busrt", "async-trait", "http-body-util", "hyper", "hyper-util", "jemallocator", "procfs"]
 agent = ["serde_yaml", "env_logger", "reqwest", "clap"]
 agent-linux = ["agent", "syslog", "is-terminal", "openssl", "jemallocator", "eva-common/services", "procfs"]
-agent-windows = ["agent", "openssl", "eventlog", "windows-service", "openssl/vendored"]
+agent-windows = ["agent", "openssl", "eventlog", "windows-service", "openssl-vendored"]
 
 #default = ["service"]
 #default = ["agent-windows"]
