--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@
 members = [
   "eva",
   "svc/svc-template",
-  "svc/svc-example-temp",
-  "svc/svc-example-sensor-set",
   "svc/dapp",
   "svc/db-influx",
   "svc/db-sql",
@@ -46,7 +44,49 @@ exclude = [
   "contrib/webinfo",
   "svc/ffi",
   "svc/controller-system",
+  "svc/svc-example-temp",
+  "svc/svc-example-sensor-set",
 ]
+
+[workspace.package]
+version = "4.0.2"
+edition = "2021"
+repository = "https://github.com/eva-ics/eva4"
+
+[workspace.dependencies]
+openssl = "^0.10.63"
+once_cell = "^1.19.0"
+hyper = "^0.14.28"
+parking_lot = "^0.12.1"
+async-channel = "^1.7"
+async-recursion = "^1.0.5"
+serde_yaml = "^0.8"
+eva-common = "^0.3.43"
+cargo_metadata = "^0.18.1"
+itertools = "^0.12.1"
+hex = "^0.4.3"
+clap = "^3.2.22"
+genpass-native = { version = "*", path = "genpass-native" }
+psrpc = { version = "*", path = "psrpc" }
+async-trait = "^0.1.77"
+log = "^0.4.20"
+tokio = "^1.36.0"
+colored = "^2.1.0"
+bmart = "^0.2.6"
+uuid = "^1.7.0"
+futures = "^0.3.30"
+serde = "^1.0.196"
+base64 = "^0.13"
+lazy_static = "^1.4.0"
+paho-mqtt = "^0.12.3"
+psrt = "^0.2"
+serde_json = "^1.0.113"
+sqlx = "^0.6.3"
+jemallocator = "^0.5.4"
+triggered = "^0.1.2"
+eva-sdk = "^0.3.45"
+busrt = "^0.4"
+chrono = "^0.4.33"
 
 [profile.release]
 strip = true
