--- a/benchmarks/bm-primary/Cargo.toml
+++ b/benchmarks/bm-primary/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "bm-primary"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-tokio = { version = "1.20.1", features = ["full"] }
-sysinfo = "0.24.7"
+tokio = { version = "1.36.0", features = ["full"] }
+sysinfo = "0.24"
 busrt = { version = "0.4", features = ["ipc", "rpc"] }
 bma-benchmark = "0.0.20"
 eva-common = { version = "0.3.43", features = ["bus-rpc", "payload", "common-payloads", "console-logger"] }
-env_logger = "0.9.0"
-log = "0.4.17"
-serde = { version = "1.0.143", features = ["derive"] }
-bmart = "0.2.4"
-serde_json = "1.0.79"
-clap = { version = "3.0.7", features = ["derive"] }
+env_logger = "0.11.1"
+log = "0.4.20"
+serde = { version = "1.0.196", features = ["derive"] }
+bmart = "0.2.6"
+serde_json = "1.0.113"
+clap = { version = "3.2.22", features = ["derive"] }
