--- a/eva/Cargo.toml
+++ b/eva/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
 name = "eva-ics"
-version = "4.0.2"
-edition = "2021"
-authors = ["Serhij S. <div@altertech.com>"]
-license = "Apache-2.0"
-description = "EVA ICS v4"
-readme = "README.md"
-keywords = ["eva-ics", "iot", "industrial", "scada", "cloud"]
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [lib]
 name = "eva"
@@ -21,44 +18,44 @@ name = "init-registry"
 path = "src/init_registry.rs"
 
 [dependencies]
-tokio = { version = "1.20.1", features = ["full"] }
+tokio = { features = ["full"] , workspace = true }
 yedb = { version = "0.4.14", features = ["server-embed", "busrt-rpc"] }
-clap = { version = "3.0.7", features = ["derive"] }
-busrt = { version = "0.4.9", features = ["full"] }
-serde_yaml = "0.8.26"
-serde_json = "1.0.96"
-colored = "2.0.0"
-serde = { version = "1.0.163", features = ["derive", "rc"] }
-glob = "0.3.0"
+clap = { features = ["derive"] , workspace = true }
+busrt = { features = ["full"] , workspace = true }
+serde_yaml = { workspace = true }
+serde_json = { workspace = true }
+colored = "2.1.0"
+serde = { features = ["derive", "rc"] , workspace = true }
+glob = "0.3.1"
 hostname = "0.3.1"
-lazy_static = "1.4.0"
-chrono = "0.4.19"
-eva-common = { version = "0.3.43", features = ["full"] }
-bmart = { version = "0.2.2" }
+lazy_static = { workspace = true }
+chrono = { workspace = true }
+eva-common = { features = ["full"] , workspace = true }
+bmart = { workspace = true }
 multi_log = "0.1.2"
-log = "0.4.14"
-syslog = "6.0.1"
-hex = "0.4.3"
-regex = "1.6.0"
-bytes = "1.1.0"
-jemallocator = { version = "0.5.0" }
-async-trait = { version = "0.1.51" }
-async-channel = "1.7.1"
-nix = { version = "0.25.0", features = ["user", "fs"] }
+log = { workspace = true }
+syslog = "6.1.0"
+hex = { workspace = true }
+regex = "1.10.3"
+bytes = "1.5.0"
+jemallocator = { workspace = true }
+async-trait = { workspace = true }
+async-channel = { workspace = true }
+nix = { version = "0.25", features = ["user", "fs"] }
 atty = "0.2.14"
-uuid = { version = "1.1.2", features = ["serde", "v4"] }
+uuid = { features = ["serde", "v4"] , workspace = true }
 triggered = "0.1.2"
-once_cell = "1.9.0"
-sqlx = { version = "0.6", features = [
-  "runtime-tokio-native-tls", "any",
-    "sqlite","mysql", "postgres" ] }
-futures = "0.3.21"
+once_cell = { workspace = true }
+sqlx = { features = [
+"runtime-tokio-native-tls", "any",
+"sqlite","mysql", "postgres" ] , workspace = true }
+futures = { workspace = true }
 ipnetwork = "0.20.0"
-async-io = "1.7.0"
+async-io = "2.3.1"
 eva-robots = "0.3.0"
-parking_lot = { version = "0.12.1", features = ["serde"] }
-openssl = "0.10.60"
-sysinfo = "0.29.2"
+parking_lot = { features = ["serde"] , workspace = true }
+openssl = { workspace = true }
+sysinfo = "0.29"
 num_cpus = "1.16.0"
 
 [features]
@@ -67,4 +64,4 @@ openssl-vendored = ["openssl/vendored", "eva-common/openssl-no-fips"]
 openssl3 = ["eva-common/openssl3"]
 
 [build-dependencies]
-cargo_metadata = "0.15.4"
+cargo_metadata = "0.18.1"
