--- a/genpass-native/Cargo.toml
+++ b/genpass-native/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
 name = "genpass-native"
-version = "0.2.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-openssl = "0.10.60"
-base64 = "0.13.0"
-eva-common = "0.3.43"
-nix = { version = "0.25.0", features = ["time"] }
-hex = "0.4.3"
-serde = { version = "1.0.143", features = ["derive"] }
-tokio = { version = "1.36.0", features = ["time", "test-util", "rt", "macros"] }
-once_cell = "1.9.0"
+openssl = { workspace = true }
+base64 = { workspace = true }
+eva-common = { workspace = true }
+nix = { version = "0.25", features = ["time"] }
+hex = { workspace = true }
+serde = { features = ["derive"] , workspace = true }
+tokio = { features = ["time", "test-util", "rt", "macros"] , workspace = true }
+once_cell = { workspace = true }
 
 [features]
 openssl-vendored = ["openssl/vendored"]
