--- a/svc/controller-lm/Cargo.toml
+++ b/svc/controller-lm/Cargo.toml
@@ -1,25 +1,27 @@
 [package]
 name = "eva-controller-lm"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-eva-common = { version = "0.3.43", features = ["events", "time", "logic", "common-payloads"] }
-eva-sdk = { version = "0.3.41", features = ["controller"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-lazy_static = "1.4.0"
-async-channel = "1.7.1"
-jemallocator = { version = "0.5.0" }
-bmart = "0.2.2"
-once_cell = "1.9.0"
-chrono = "0.4.19"
-cron = "0.11.0"
-submap = { version = "0.2.3", features = ["native-digest"] }
-uuid = { version = "1.1.2", features = ["serde", "v4"] }
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+eva-common = { features = ["events", "time", "logic", "common-payloads"] , workspace = true }
+eva-sdk = { features = ["controller"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+lazy_static = { workspace = true }
+async-channel = { workspace = true }
+jemallocator = { workspace = true }
+bmart = { workspace = true }
+once_cell = { workspace = true }
+chrono = "0.4.33"
+cron = "0.12.0"
+submap = { version = "0.2.6", features = ["native-digest"] }
+uuid = { features = ["serde", "v4"] , workspace = true }
 eva-robots = "0.3.0"
 
 [features]
