--- a/svc/controller-modbus/Cargo.toml
+++ b/svc/controller-modbus/Cargo.toml
@@ -1,29 +1,29 @@
 [package]
 name = "eva-controller-modbus"
-version = "4.0.2"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-eva-sdk = { version = "0.3.41", features = ["controller"] }
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-eva-common = { version = "0.3.43", features = ["events", "common-payloads"] }
-log = "0.4.14"
-async-channel = "1.7.1"
-uuid = { version = "1.1.2", features = ["serde", "v4"] }
-jemallocator = { version = "0.5.0" }
-once_cell = "1.9.0"
-itertools = "0.10.3"
-lazy_static = "1.4.0"
-bmart = "0.1.15"
-rmodbus = { version = "0.6.0", features = [ "std" ] }
+eva-sdk = { features = ["controller"] , workspace = true }
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+eva-common = { features = ["events", "common-payloads"] , workspace = true }
+log = { workspace = true }
+async-channel = { workspace = true }
+uuid = { features = ["serde", "v4"] , workspace = true }
+jemallocator = { workspace = true }
+once_cell = { workspace = true }
+itertools = { workspace = true }
+lazy_static = { workspace = true }
+bmart = { workspace = true }
+rmodbus = { version = "0.6", features = [ "std" ] }
 simple-pool = "0.0.16"
 ieee754 = "0.2.6"
-tokio-serial = "5.4.3"
+tokio-serial = "5.4.4"
 
 [features]
 std-alloc = []
