--- a/svc/controller-pubsub/Cargo.toml
+++ b/svc/controller-pubsub/Cargo.toml
@@ -1,25 +1,27 @@
 [package]
 name = "eva-controller-pubsub"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-eva-common = { version = "0.3.43", features = ["payload", "common-payloads", "events", "actions", "time", "acl"] }
-eva-sdk = { version = "0.3.41", features = ["controller"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+eva-common = { features = ["payload", "common-payloads", "events", "actions", "time", "acl"] , workspace = true }
+eva-sdk = { features = ["controller"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
 ttl_cache = { version = "0.5.1" }
-log = "0.4.14"
-async-channel = "1.6.1"
-jemallocator = { version = "0.5.0" }
+log = { workspace = true }
+async-channel = { workspace = true }
+jemallocator = { workspace = true }
 psrpc = { path = "../../psrpc" }
 psrt = "0.2"
-paho-mqtt = "0.10.0"
-serde_json = "1.0.79"
-once_cell = "1.9.0"
-async-recursion = "1.0.4"
+paho-mqtt = "0.12.3"
+serde_json = { workspace = true }
+once_cell = { workspace = true }
+async-recursion = "1.0.5"
 parking_lot = "0.12.1"
 
 [features]
