--- a/svc/controller-trap/Cargo.toml
+++ b/svc/controller-trap/Cargo.toml
@@ -1,24 +1,26 @@
 [package]
 name = "eva-controller-trap"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-eva-common = { version = "0.3.43", features = ["events", "time"] }
-eva-sdk = { version = "0.3.41" }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-lazy_static = "1.4.0"
-async-channel = "1.7.1"
-jemallocator = { version = "0.5.0" }
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+eva-common = { features = ["events", "time"] , workspace = true }
+eva-sdk = { workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+lazy_static = { workspace = true }
+async-channel = { workspace = true }
+jemallocator = { workspace = true }
 ipnetwork = "0.20.0"
-snmp-parser = "0.8.0"
+snmp-parser = "0.8"
 snmptools = { version = "0.0.11", features = ["static"] }
 psrpc = { path = "../../psrpc" }
-once_cell = "1.10.0"
+once_cell = { workspace = true }
 
 [features]
 std-alloc = []
