--- a/svc/controller-virtual/Cargo.toml
+++ b/svc/controller-virtual/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
 name = "eva-controller-virtual"
-version = "4.0.2"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-eva-common = { version = "0.3.43", features = ["events", "common-payloads"] }
-eva-sdk = { version = "0.3.41", features = ["controller"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-async-channel = "1.7.1"
-uuid = { version = "1.1.2", features = ["serde", "v4"] }
-jemallocator = { version = "0.5.0" }
-bmart = "0.1.14"
-tagmap ="0.0.7"
-once_cell = "1.18.0"
+eva-common = { features = ["events", "common-payloads"] , workspace = true }
+eva-sdk = { features = ["controller"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+async-channel = { workspace = true }
+uuid = { features = ["serde", "v4"] , workspace = true }
+jemallocator = { workspace = true }
+bmart = { workspace = true }
+tagmap ="0.0.9"
+once_cell = { workspace = true }
 
 [features]
 std-alloc = []
