--- a/svc/dapp/Cargo.toml
+++ b/svc/dapp/Cargo.toml
@@ -1,20 +1,22 @@
 [package]
 name = "eva-dapp"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-eva-common = { version = "0.3.43" }
-eva-sdk = { version = "0.3.41", features = ["http"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-async-channel = "1.7.1"
-jemallocator = { version = "0.5.0" }
-bmart = "0.2.6"
-once_cell = "1.18.0"
-serde_yaml = "0.9.25"
+eva-common = { workspace = true }
+eva-sdk = { features = ["http"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+async-channel = { workspace = true }
+jemallocator = { workspace = true }
+bmart = { workspace = true }
+once_cell = { workspace = true }
+serde_yaml = "0.8"
 
 [features]
 std-alloc = []
