--- a/svc/db-influx/Cargo.toml
+++ b/svc/db-influx/Cargo.toml
@@ -1,27 +1,29 @@
 [package]
 name = "eva-db-influx"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["full"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-eva-common = { version = "0.3.43", features = ["events", "time", "common-payloads"] }
-log = "0.4.14"
-async-channel = "1.7.1"
-eva-sdk = { version = "0.3.41" }
-once_cell = "1.9.0"
+busrt = { features = ["full"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+eva-common = { features = ["events", "time", "common-payloads"] , workspace = true }
+log = { workspace = true }
+async-channel = { workspace = true }
+eva-sdk = { workspace = true }
+once_cell = { workspace = true }
 hyper = { version = "0.14.18", features = ["client", "http1", "http2", "tcp", "stream"] }
-hyper-tls = "0.5.0"
-base64 = "0.13.0"
+hyper-tls = "0.5"
+base64 = "0.13"
 simple-pool = "0.0.16"
-serde_json = "1.0.79"
-urlencoding = "2.1.0"
-csv-async = "1.2.4"
-futures = "0.3.21"
-jemallocator = { version = "0.5.0" }
+serde_json = { workspace = true }
+urlencoding = "2.1.3"
+csv-async = "1.2.6"
+futures = "0.3.30"
+jemallocator = { workspace = true }
 
 [features]
 std-alloc = []
