--- a/svc/db-timescale/Cargo.toml
+++ b/svc/db-timescale/Cargo.toml
@@ -1,24 +1,26 @@
 [package]
 name = "eva-db-timescale"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-eva-common = { version = "0.3.43", features = ["events", "db", "workers", "common-payloads", "time"] }
-log = "0.4.14"
-async-channel = "1.7.1"
-eva-sdk = { version = "0.3.41" }
-once_cell = "1.9.0"
-bmart = "0.1.10"
-sqlx = { version = "0.6", features = [
-  "runtime-tokio-native-tls", "postgres", "chrono" ] }
-futures = "0.3.21"
-chrono = "0.4.31"
-jemallocator = { version = "0.5.0" }
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+eva-common = { features = ["events", "db", "workers", "common-payloads", "time"] , workspace = true }
+log = { workspace = true }
+async-channel = { workspace = true }
+eva-sdk = { workspace = true }
+once_cell = { workspace = true }
+bmart = { workspace = true }
+sqlx = { version = "0.6.3", features = [
+"runtime-tokio-native-tls", "postgres", "chrono" ] }
+futures = { workspace = true }
+chrono = { workspace = true }
+jemallocator = { workspace = true }
 
 [features]
 std-alloc = []
