--- a/svc/ffi/Cargo.toml
+++ b/svc/ffi/Cargo.toml
@@ -2,20 +2,21 @@
 name = "eva-ffi"
 version = "4.0.2"
 edition = "2021"
+publish = false
 
 [dependencies]
 busrt = { version = "0.4", features = ["rpc", "ipc"] }
-eva-common = { version = "0.3.37", features = ["events", "time"] }
-eva-sdk = { version = "0.3.39" }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-async-channel = "1.6.1"
-jemallocator = { version = "0.5.0" }
+eva-common = { version = "0.3.39", features = ["events", "time"] }
+eva-sdk = { version = "0.3.41" }
+tokio = { version = "1.36.0", features = ["full"] }
+async-trait = { version = "0.1.77" }
+serde = { version = "1.0.196", features = ["derive", "rc"] }
+log = "0.4.20"
+async-channel = "1.9.0"
+jemallocator = { version = "0.5.4" }
 libloading = "0.8.1"
-once_cell = "1.18.0"
-clap = { version = "3.0.7", features = ["derive"] }
+once_cell = "1.19.0"
+clap = { version = "3.2.25", features = ["derive"] }
 
 [features]
 std-alloc = []
