--- a/svc/generator/Cargo.toml
+++ b/svc/generator/Cargo.toml
@@ -1,25 +1,25 @@
 [package]
 name = "eva-svc-generator"
-version = "1.0.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-tokio = { version = "1.29.1", features = ["full"] }
-eva-common = { version = "0.3.43", features = ["events", "common-payloads", "payload", "acl", "time"] }
-eva-sdk = { version = "0.3.41" }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.133", features = ["derive", "rc"] }
-log = "0.4.14"
-jemallocator = { version = "0.5.0" }
-once_cell = "1.13.1"
-busrt = { version = "0.4.6", features = ["rpc", "ipc"] }
+tokio = { features = ["full"] , workspace = true }
+eva-common = { features = ["events", "common-payloads", "payload", "acl", "time"] , workspace = true }
+eva-sdk = { workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+jemallocator = { workspace = true }
+once_cell = { workspace = true }
+busrt = { features = ["rpc", "ipc"] , workspace = true }
 rand = "0.8.5"
 meval = "0.2.0"
 bmart-derive = "0.1.3"
-uuid = { version = "1.4.0", features = ["v4"] }
-chrono = "0.4.19"
+uuid = { features = ["v4"] , workspace = true }
+chrono = { workspace = true }
 
 [features]
 std-alloc = []
