--- a/svc/hmi/Cargo.toml
+++ b/svc/hmi/Cargo.toml
@@ -1,53 +1,53 @@
 [package]
 name = "eva-hmi"
-version = "4.0.2"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-eva-sdk = { version = "0.3.41", features = ["http", "fs"] }
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-async-channel = "1.7.1"
-submap = { version = "0.2.5" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-eva-common = { version = "0.3.43", features = [
-        "events", "workers", "acl", "dataconv", "time",
-        "db", "hyper-tools", "common-payloads"] }
-log = "0.4.14"
-uuid = { version = "1.1.2", features = ["serde", "v4"] }
-jemallocator = { version = "0.5.0" }
-once_cell = "1.9.0"
-lazy_static = "1.4.0"
-hyper = { version = "0.14.18", features = ["server", "http1", "http2"] }
+eva-sdk = { features = ["http", "fs"] , workspace = true }
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+async-channel = { workspace = true }
+submap = { version = "0.2.6" }
+serde = { features = ["derive", "rc"] , workspace = true }
+eva-common = { features = [
+"events", "workers", "acl", "dataconv", "time",
+"db", "hyper-tools", "common-payloads"] , workspace = true }
+log = { workspace = true }
+uuid = { features = ["serde", "v4"] , workspace = true }
+jemallocator = { workspace = true }
+once_cell = { workspace = true }
+lazy_static = { workspace = true }
+hyper = { features = ["server", "http1", "http2"] , workspace = true }
 eva-rjrpc = { version = "0.3.1", features = ["http"] }
-bmart = { version = "0.1.14" }
-sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "any", "mysql", "postgres" ] }
-futures = "0.3.21"
-chrono = "0.4.19"
-serde_yaml = "0.8.26"
-serde_json = "1.0.79"
-url = "2.2.2"
-cookie = "0.16.0"
-multer = "2.0.2"
-hex = "0.4.3"
-tera = "1.15.0"
-hyper-tungstenite = "0.11.0"
+bmart = { workspace = true }
+sqlx = { features = [ "runtime-tokio-native-tls" , "sqlite", "any", "mysql", "postgres" ] , workspace = true }
+futures = { workspace = true }
+chrono = { workspace = true }
+serde_yaml = { workspace = true }
+serde_json = { workspace = true }
+url = "2.5.0"
+cookie = "0.18.0"
+multer = "3.0.0"
+hex = { workspace = true }
+tera = "1.19.1"
+hyper-tungstenite = "0.11"
 gettext = "0.4.0"
-hyper-static = "0.1.5"
-urlencoding = "2.1.0"
-openssl = "0.10.60"
+hyper-static = "0.1"
+urlencoding = "2.1.3"
+openssl = { workspace = true }
 genpass-native = { path = "../../genpass-native" }
 parking_lot = "0.12.1"
 shlex = "1.3.0"
-async-recursion = "1.0.4"
-base64 = "0.21.2"
+async-recursion = { workspace = true }
+base64 = { workspace = true }
 
 [features]
 std-alloc = []
 openssl-vendored = ["openssl/vendored"]
 
 [build-dependencies]
-cargo_metadata = "0.15.4"
+cargo_metadata = "0.18.1"
