--- a/svc/mirror/Cargo.toml
+++ b/svc/mirror/Cargo.toml
@@ -1,22 +1,24 @@
 [package]
 name = "eva-svc-mirror"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-eva-common = { version = "0.3.43", features = ["events", "time", "hyper-tools"] }
-eva-sdk = { version = "0.3.41" }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-lazy_static = "1.4.0"
-async-channel = "1.7.1"
-jemallocator = { version = "0.5.0" }
-hyper = { version = "0.14.18", features = ["server", "tcp", "http1", "http2"] }
-once_cell = "1.9.0"
-serde_yaml = "0.8.26"
-hyper-static = "0.1.4"
+eva-common = { features = ["events", "time", "hyper-tools"] , workspace = true }
+eva-sdk = { workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+lazy_static = { workspace = true }
+async-channel = { workspace = true }
+jemallocator = { workspace = true }
+hyper = { features = ["server", "tcp", "http1", "http2"] , workspace = true }
+once_cell = { workspace = true }
+serde_yaml = { workspace = true }
+hyper-static = "0.1"
 
 [features]
 std-alloc = []
