--- a/svc/repl/Cargo.toml
+++ b/svc/repl/Cargo.toml
@@ -1,28 +1,30 @@
 [package]
 name = "eva-repl"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-eva-common = { version = "0.3.43", features = ["events", "time", "common-payloads"] }
-eva-sdk = { version = "0.3.41", features = ["pubsub", "http"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-lazy_static = "1.4.0"
-async-channel = "1.7.1"
-jemallocator = { version = "0.5.0" }
-psrpc = { path = "../../psrpc" }
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+eva-common = { features = ["events", "time", "common-payloads"] , workspace = true }
+eva-sdk = { features = ["pubsub", "http"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+lazy_static = { workspace = true }
+async-channel = { workspace = true }
+jemallocator = { workspace = true }
+psrpc = { workspace = true }
 psrt = "0.2"
-paho-mqtt = "0.10.0"
-serde_json = "1.0.79"
-once_cell = "1.10.0"
-bmart = "0.1.14"
+paho-mqtt = "0.12.3"
+serde_json = { workspace = true }
+once_cell = { workspace = true }
+bmart = { workspace = true }
 triggered = "0.1.2"
-uuid = { version = "1.1.2", features = ["serde", "v4"] }
-openssl = "0.10.60"
+uuid = { features = ["serde", "v4"] , workspace = true }
+openssl = { workspace = true }
 
 [features]
 std-alloc = []
