--- a/svc/svc-expiration/Cargo.toml
+++ b/svc/svc-expiration/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "eva-svc-expiration"
-version = "4.0.2"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-eva-common = { version = "0.3.43", features = ["events", "time"] }
-log = "0.4.14"
-lazy_static = "1.4.0"
-async-channel = "1.7.1"
-eva-sdk = { version = "0.3.41" }
-jemallocator = { version = "0.5.0" }
-async-io = "1.7.0"
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+eva-common = { features = ["events", "time"] , workspace = true }
+log = { workspace = true }
+lazy_static = { workspace = true }
+async-channel = { workspace = true }
+eva-sdk = { workspace = true }
+jemallocator = { workspace = true }
+async-io = "2.3.1"
 
 [features]
 std-alloc = []
