--- a/svc/svc-filewriter/Cargo.toml
+++ b/svc/svc-filewriter/Cargo.toml
@@ -1,24 +1,26 @@
 [package]
 name = "eva-svc-filewriter"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
-eva-common = { version = "0.3.43", features = ["events", "time", "common-payloads"] }
-eva-sdk = { version = "0.3.41" }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-async-channel = "1.7.1"
-serde_json = "1.0.79"
-chrono = "0.4.19"
-once_cell = "1.9.0"
-jemallocator = { version = "0.5.0" }
-cron = "0.11.0"
-parking_lot = "0.12.1"
-openssl = "0.10.60"
+busrt = { features = ["rpc", "ipc"] , workspace = true }
+eva-common = { features = ["events", "time", "common-payloads"] , workspace = true }
+eva-sdk = { workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+async-channel = { workspace = true }
+serde_json = { workspace = true }
+chrono = { workspace = true }
+once_cell = { workspace = true }
+jemallocator = { workspace = true }
+cron = "0.12.0"
+parking_lot = { workspace = true }
+openssl = { workspace = true }
 
 [features]
 std-alloc = []
