--- a/svc/svc-locker/Cargo.toml
+++ b/svc/svc-locker/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
 name = "eva-svc-locker"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-eva-common = { version = "0.3.43", features = ["events", "time","common-payloads"] }
-eva-sdk = { version = "0.3.41" }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-jemallocator = { version = "0.5.0" }
-bmart = "0.1.14"
+eva-common = { features = ["events", "time","common-payloads"] , workspace = true }
+eva-sdk = { workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+jemallocator = { workspace = true }
+bmart = { workspace = true }
 
 [features]
 std-alloc = []
