--- a/svc/svc-mailer/Cargo.toml
+++ b/svc/svc-mailer/Cargo.toml
@@ -1,22 +1,24 @@
 [package]
 name = "eva-svc-mailer"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-eva-common = { version = "0.3.43", features = ["events", "time"] }
-eva-sdk = { version = "0.3.41" }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-lettre = { version = "0.10.1", features = ["tokio1-native-tls"] }
-jemallocator = { version = "0.5.0" }
-once_cell = "1.19.0"
+eva-common = { features = ["events", "time"] , workspace = true }
+eva-sdk = { workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+lettre = { version = "0.11.4", features = ["tokio1-native-tls"] }
+jemallocator = { workspace = true }
+once_cell = { workspace = true }
 ttl_cache = { version = "0.5" }
-parking_lot = "0.12.1"
+parking_lot = { workspace = true }
 tokio-task-pool = "0.1.5"
-async-channel = "1.7.1"
+async-channel = { workspace = true }
 
 [features]
 std-alloc = []
