--- a/svc/svc-modbus-slave/Cargo.toml
+++ b/svc/svc-modbus-slave/Cargo.toml
@@ -1,21 +1,23 @@
 [package]
 name = "eva-svc-modbus-slave"
-version = "4.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [dependencies]
-eva-common = { version = "0.3.43", features = ["events", "time"] }
-eva-sdk = { version = "0.3.41" }
-tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-log = "0.4.14"
-lazy_static = "1.4.0"
-async-channel = "1.7.1"
-jemallocator = { version = "0.5.0" }
-rmodbus = "0.6.0"
-tokio-serial = "5.4.3"
-once_cell = "1.9.0"
+eva-common = { features = ["events", "time"] , workspace = true }
+eva-sdk = { workspace = true }
+tokio = { features = ["full"] , workspace = true }
+async-trait = { workspace = true }
+serde = { features = ["derive", "rc"] , workspace = true }
+log = { workspace = true }
+lazy_static = { workspace = true }
+async-channel = { workspace = true }
+jemallocator = { workspace = true }
+rmodbus = "0.6"
+tokio-serial = "5.4.4"
+once_cell = { workspace = true }
 
 [features]
 std-alloc = []
