--- a/tools/eva-cloud-manager/Cargo.toml
+++ b/tools/eva-cloud-manager/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "eva-cloud-manager"
-version = "4.0.2"
-edition = "2021"
-authors = ["Bohemia Automation / Altertech <div@altertech.com>"]
-license = "Apache-2.0"
-description = "EVA ICS v4 cloud manager CLI"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+publish = false
 
 [lib]
 name = "ecm"
@@ -15,35 +14,35 @@ name = "eva-cloud-manager"
 path = "src/main.rs"
 
 [dependencies]
-serde = { version = "1.0.143", features = ["derive", "rc"] }
-serde_yaml = "0.8.26"
-eva-common = { version = "0.3.43", features = ["common-payloads", "console-logger"] }
-eva-client = "0.3.0"
-clap = { version = "3.0.7", features = ["derive"] }
-tokio = { version = "1.20.1", features = ["full"] }
-tera = "1.15.0"
-log = "0.4.16"
-env_logger = "0.9.0"
-colored = "2.0.0"
-bmart = "0.1.16"
+serde = { features = ["derive", "rc"] , workspace = true }
+serde_yaml = "0.8"
+eva-common = { features = ["common-payloads", "console-logger"] , workspace = true }
+eva-client = "0.3"
+clap = { version = "3.2.22", features = ["derive"] }
+tokio = { features = ["full"] , workspace = true }
+tera = "1.19.1"
+log = { workspace = true }
+env_logger = "0.11.1"
+colored = "2.1.0"
+bmart = { workspace = true }
 atty = "0.2"
-lazy_static = "1.4.0"
+lazy_static = { workspace = true }
 hyper = { version = "0.14.18", features = ["client", "http1", "tcp"] }
-hyper-tls = "0.5.0"
-serde_json = "1.0.79"
+hyper-tls = "0.5"
+serde_json = "1.0.113"
 ttycarousel = { version = "0.1.4", features = ["tokio1"] }
-hex = "0.4.3"
-base64 = "0.13.0"
-ring = "0.16.20"
-once_cell = "1.9.0"
+hex = { workspace = true }
+base64 = "0.13"
+ring = "0.17.7"
+once_cell = { workspace = true }
 prettytable-rs = "0.10.0"
-chrono = "0.4.19"
-bzip2 = "0.4.3"
-openssl = "0.10.60"
+chrono = "0.4.33"
+bzip2 = "0.4.4"
+openssl = { workspace = true }
 expanduser = "1.2.2"
 
 [features]
 openssl-vendored = ["openssl/vendored"]
 
 [build-dependencies]
-cargo_metadata = "0.15.4"
+cargo_metadata = "0.18.1"
