--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ members = [
   "svc/bridge-ads",
   "svc/controller-w1",
   "svc/controller-trap",
+  "svc/controller-dobj",
   "svc/controller-sr",
   "svc/controller-virtual",
   "svc/controller-lm",
@@ -62,7 +63,7 @@ parking_lot = "^0.12.1"
 async-channel = "^1.7"
 async-recursion = "^1.0.5"
 serde_yaml = "^0.8"
-eva-common = "^0.3.44"
+eva-common = "^0.3.47"
 cargo_metadata = "^0.18.1"
 itertools = "^0.12.1"
 hex = "^0.4.3"
