--- a/eva/Cargo.toml
+++ b/eva/Cargo.toml
@@ -57,6 +57,7 @@ parking_lot = { features = ["serde"] , workspace = true }
 openssl = { workspace = true }
 sysinfo = "0.29"
 num_cpus = "1.16.0"
+binrw = "0.13.3"
 
 [features]
 std-alloc = []
