allow custom CA in influxdb

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,9 @@ members = [
   "tools/gen-intl",
   "psrpc",
   "genpass-native",
+  "crypto-tools",
   "benchmarks/bm-primary"
-]
+, "crypto-tools"]
 
 resolver = "1"
 
