--- a/svc/db-influx/Cargo.toml
+++ b/svc/db-influx/Cargo.toml
@@ -24,6 +24,9 @@ urlencoding = "2.1.3"
 csv-async = "1.2.6"
 futures = "0.3.30"
 jemallocator = { workspace = true }
+tokio-native-tls = "0.3.1"
+crypto-tools = { path = "../../crypto-tools" }
 
 [features]
 std-alloc = []
+openssl-vendored = ["tokio-native-tls/vendored"]
