--- a/svc/controller-sr/Cargo.toml
+++ b/svc/controller-sr/Cargo.toml
@@ -12,11 +12,11 @@ tokio = { features = ["full"] , workspace = true }
 async-trait = { workspace = true }
 serde = { features = ["derive", "rc"] , workspace = true }
 log = { workspace = true }
-lazy_static = { workspace = true }
 async-channel = { workspace = true }
 jemallocator = { workspace = true }
 bmart = { workspace = true }
 once_cell = { workspace = true }
+shlex = "1.3.0"
 
 [features]
 std-alloc = []
