--- a/share/svc-tpl/svc-tpl-replication.yml
+++ b/share/svc-tpl/svc-tpl-replication.yml
@@ -53,6 +53,7 @@ config:
   # subscribed OIDs
   oids:
     - "#"
+  oids_exclude: []
   # DANGEROUS, enable for multi-level clusters only
   #replicate_remote: true
 user: nobody
