allow OID masks in timescale requests, eva_pg

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ resolver = "1"
 
 exclude = [
   "contrib/webinfo",
+  "eva_pg",
   "svc/ffi",
   "svc/controller-system",
   "svc/svc-example-temp",
