--- a/svc/controller-system/Makefile
+++ b/svc/controller-system/Makefile
@@ -16,7 +16,7 @@ compile-musl-aarch64:
 compile-windows:
 	rm -rf _build/eva-cs-agent
 	mkdir -p ./_build/eva-cs-agent
-	ssh -t lab-w1 "cd /src && ./init.bat && cd /src/eva4/svc/controller-system && cargo build --features agent-windows --release"
+	ssh -t lab-w1 "cd /src && ./init.bat && cd /src/eva4/svc/controller-system && git checkout stable && git pull && cargo build --features agent-windows --release"
 	scp lab-w1:/src/eva4/svc/controller-system/target/release/eva-cs-agent-windows.exe ./_build/eva-cs-agent/eva-cs-agent.exe
 	cp agent-config-example.yml ./_build/eva-cs-agent/config.yml
 
