vendored off by default

--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -66,7 +66,7 @@ openssl3 = ["eva-common/openssl3"]
 service = ["busrt", "async-trait", "http-body-util", "hyper", "hyper-util", "jemallocator", "procfs"]
 agent = ["serde_yaml", "env_logger", "reqwest", "clap"]
 agent-linux = ["agent", "syslog", "is-terminal", "openssl", "jemallocator", "eva-common/services", "procfs"]
-agent-windows = ["agent", "openssl", "eventlog", "windows-service", "openssl-vendored"]
+agent-windows = ["agent", "openssl", "eventlog", "windows-service"]
 
 #default = ["service"]
 #default = ["agent-windows"]
