--- a/contrib/controller-tuya/svc-tpl-controller-tuya.yml
+++ b/contrib/controller-tuya/svc-tpl-controller-tuya.yml
@@ -22,8 +22,10 @@ config:
   action_map:
     'unit:t1/switch':
       dps: '16'
-      # send or set_value
-      kind: 'send'
+      # control or set_value
+      kind: control
+      # convert action value to boolean
+      convert_bool: true
 react_to_fail: true
 user: nobody
 workers: 1
